# Pia-s

./: .gitignore  Cargo.toml  README.md  app.js  app.wasm  index.html  justfile  rust-toolchain.toml  shell.nix  style.css
src/: app.js.j2  env.js  index.html  pre-commit.bash  style.css
